--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>Stand Origami</title>
   <body>
-
+      <center><h1>Commandez gratuitement en ligne !</h1></center>
   </body>
 </html>
