--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <title>Stand Origami</title>
   <body>
       <center><h1>Commandez gratuitement en ligne !</h1></center>
-      <center><img src="https://st4.depositphotos.com/14311584/i/600/depositphotos_244527068-stock-photo-origami-figure-paper-white-background.jpg" alt="Fond origami"></center>
+      <center><img src="https://img.freepik.com/vecteurs-libre/illustration-avion-papier-origami-fond-blanc_272787-640.jpg?size=626&ext=jpg" alt="Fond origami"></center>
   </body>
 </html>
