--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html>
+<head>
+
+<link rel="stylesheet" href="mystyle.css">
+</head><html>
   <title>Stand Origami</title>
   <body>
-      <center><h1>Commandez gratuitement en ligne !</h1></center>
-      <center><img src="https://img.freepik.com/vecteurs-libre/illustration-avion-papier-origami-fond-blanc_272787-640.jpg?size=626&ext=jpg" alt="Fond origami"></center>
-      <center><a href="mailto:remi.superkid@gmail.com?subject=Commande Origami (envoyer directement le mail)">Commandez ici</a></center>
+    <div class="centre">
+      <h1>Commandez gratuitement en ligne !</h1>
+      <img src="https://img.freepik.com/vecteurs-libre/illustration-avion-papier-origami-fond-blanc_272787-640.jpg?size=626&ext=jpg" alt="Fond origami">
+      <p><a href="mailto:remi.superkid@gmail.com?subject=Commande Origami (envoyer directement le mail)">Commandez ici</a></p>
+    </div>
   </body>
 </html>
