--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
-  <title>Stand Origami</title>
+  <head>
+    <title>Stand Origami</title>
+    <link>
+  </head>
   <body>
       <center><h1>Commandez gratuitement en ligne !</h1></center>
-      <center><img src="https://img.freepik.com/vecteurs-libre/illustration-avion-papier-origami-fond-blanc_272787-640.jpg?size=626&ext=jpg" alt="Fond origami"></center>
+      <center><img src="./images/Fond_origami.jpg" alt="Fond origami"></center>
       <center><a href="mailto:remi.superkid@gmail.com?subject=Commande Origami (envoyer directement le mail)">Commandez ici</a></center>
   </body>
 </html>
