--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
 <html>
-  <head>
-    <title>Stand Origami</title>
-    <link>
-  </head>
   <body>
-      <center><h1>Commandez gratuitement en ligne !</h1></center>
-      <center><img src="./images/Fond_origami.jpg" alt="Fond origami"></center>
-      <center><a href="mailto:remi.superkid@gmail.com?subject=Commande Origami (envoyer directement le mail)">Commandez ici</a></center>
+    <div class="centre"
+      <title>Stand Origami</title>
+      <h1>Commandez gratuitement en ligne !</h1>
+      <img src="./images/Fond_origami.jpg" alt="Fond origami">
+      <a href="mailto:remi.superkid@gmail.com?subject=Commande Origami (envoyer directement le mail)">Commandez ici</a></center>
+    </div>
   </body>
 </html>
