--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <head>
 <link rel="stylesheet" href="CSSorigami.css">
+<title>Stand Origami</title>
 </head>
 <html>
   <body>
-    <div class="centre"
-      <title>Stand Origami</title>
-      <h1>Commandez gratuitement en ligne !</h1>
+    <div class="centre">
+      <h1><i>Commandez gratuitement en ligne !</i></h1>
       <img src="./images/Fond_origami.jpg" alt="Fond origami">
-      <a href="mailto:remi.superkid@gmail.com?subject=Commande Origami (envoyer directement le mail)">Commandez ici</a></center>
     </div>
+    <center><button><a href="mailto:remi.superkid@gmail.com?subject=Ecrire le nom de l'origami et la date de recuperation ">Commandez ici</a></button></center>
   </body>
 </html>
