--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
   <body>
     <div class="centre">
-      <h1><i>Commandez gratuitement en ligne !</i></h1>
+      <h1><i>~Commandez gratuitement en ligne !~</i></h1>
       <img src="./images/Fond_origami.jpg" alt="Fond origami">
     </div>
     <center><button><a href="mailto:remi.superkid@gmail.com?subject=Ecrire le nom de l'origami et la date de recuperation ">Commandez ici</a></button></center>
