--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </div>
     <center><button><a href="mailto:remi.superkid@gmail.com?subject=Ecrire le nom de l'origami et la date de recuperation ">Commandez ici</a></button></center>
     <div class="centre">
-      <img src="./images/bateau_origam.jpg" alt="1ère photo oarigami">
+      <img src="./images/bateau_origami.jpg" alt="1ère photo oarigami">
   </body>
 </html>
