--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src="./images/Fond_origami.jpg" alt="Fond origami">
     </div>
     <center><button><a href="mailto:remi.superkid@gmail.com?subject=Ecrire le nom de l'origami et la date de recuperation ">Commandez ici</a></button></center>
-    <div class="centre">
+    <div class="image">
       <img src="./images/bateau_origami.jpg" alt="1ère photo oarigami">
   </body>
 </html>
