--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
       <h1><i>~Commandez gratuitement en ligne !~</i></h1>
       <img src="./images/Fond_origami.jpg" alt="Fond origami">
     </div>
-    <center><button><a href="./commander">Commandez ici</a></button></center>
+    <center><button><a href="./commander/index.html">Commandez ici</a></button></center>
     <div class="image">
+      <img src="./images/bateau_origami.jpg" alt="1ère photo oarigami">
+      <img src="./images/bateau_origami.jpg" alt="1ère photo oarigami">
+      <img src="./images/bateau_origami.jpg" alt="1ère photo oarigami">
       <img src="./images/bateau_origami.jpg" alt="1ère photo oarigami">
   </body>
 </html>
